--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  
+ <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuqxEwKduwjGCSdALeEAGVkLwnRyizRsM"></script>
+ <meta charset="utf-8">
   <title>Cs411Angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
